--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aos": "^2.3.4",
     "axios": "^1.1.3",
     "babel-plugin-macros": "^3.1.0",
+    "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "cors": "^2.8.5",
     "i": "^0.3.7",
@@ -30,6 +31,7 @@
     "npm": "^8.18.0",
     "nuka-carousel": "^5.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.4",
