--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-whatsapp": "^0.3.0",
     "react-wow": "^1.0.0",
     "redux": "^4.2.0",
     "sassy-datepicker": "^0.8.0",
